# cautious-telegram

./: .env.example  .gitignore  README.md  TESTING-GUIDE.md  index.html  package.json  vite.config.js  vitest.config.js
.claude/: PR-STRETCH-009-NOTES.md
docs/: architecture.md  demo-script-dogfooded.md  demo.md  prd.md  task-list.md  testing-report.md  usage-guide.md
src/: App.jsx  index.css
src-tauri/: Cargo.toml  README-FFMPEG.md  SETUP-NOTES.md  create-icon.ps1  tauri.conf.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: main.rs
src-tauri/src/commands/: export.rs  import.rs  mod.rs  project.rs  recording.rs  transcription.rs
src-tauri/src/database/: mod.rs  models.rs  operations.rs  schema.rs
src-tauri/src/export/: encoder.rs  mod.rs  pipeline.rs
src-tauri/src/ffmpeg/: commands.rs  metadata.rs  mod.rs  wrapper.rs
src-tauri/src/tests/: export_test.rs  import_test.rs  mod.rs
src-tauri/src/transcription/: mod.rs
src/components/: ClipPropertiesPanel.jsx  ExportDialog.jsx  MediaDetailModal.jsx  MediaLibrary.jsx  PlaybackControls.jsx  PreviewPlayer.jsx  RecordingPanel.jsx  TextOverlayEditor.jsx  Timeline.jsx  TranscriptModal.jsx  TransitionEditor.jsx
src/components/timeline/: Playhead.jsx  TextOverlayClip.jsx  TimeRuler.jsx  TimelineClip.jsx  TransitionIndicator.jsx
src/hooks/: useAutoSave.js  useScreenRecording.js  useWebcamRecording.js
src/store/: dragStore.jsx  timelineStore.jsx
src/utils/: api.js  exportPresets.js  playback.js  playback.test.js  preview.js  screenRecorder.js  timeline.js  timeline.test.js  webcamRecorder.js
